package br.edu.central.centrallj.domain;

public enum MissionCombatState {
  LOBBY,
  ACTIVE,
  NORMAL,
  ALERTA_INFILTRACAO,
  EM_DUELO,
  SABOTADA,
  DEFENDIDA,
  SEM_CHEFE,
  EM_CRISE,
  COMPROMETIDA
}
