package br.edu.central.centrallj.domain;

public enum MissionInviteStatus {
  PENDING,
  ACCEPTED,
  DECLINED
}
