package br.edu.central.centrallj.domain;

public enum MissionMemberRole {
  CHEFE,
  HERO_MEMBER,
  VILLAIN_INTRUDER
}
