package br.edu.central.centrallj.domain;

public enum PuzzleType {
  DRAG_SORT,
  NODE_CONNECT,
  SEQUENCE_INPUT,
  CARD_MATCH,
  TILE_ROTATE,
  COLOR_SIMON,
  TERMINAL_HACK,
  SLIDING_TILE,
  ARCADE_SHOOTER,
  ARCADE_DODGE
}
