package br.edu.central.centrallj.domain;

public enum SabotageScope {
  CHEFE,
  MEMBRO_ESPECIFICO,
  EQUIPE,
  SILENCIOSO
}
