package br.edu.central.centrallj.domain;

public enum SabotageType {
  BLOCK_TASK,
  SLOW_PROGRESS,
  REMOVE_MEMBER,
  SILENT_OBSERVE
}
