package br.edu.central.centrallj.domain;

public enum TaskStatus {
  PENDING,
  IN_PROGRESS,
  AWAITING_PUZZLE,
  DONE,
  BLOCKED
}
