package br.edu.central.centrallj.domain;

/** Papéis de acesso globais. OPERATOR mantido para compatibilidade com rotas legadas. */
public enum UserRole {
  ADMIN,
  HERO,
  VILLAIN,
  OPERATOR
}
