@startuml
title Central-LJ — Modelo de Domínio

hide circle
skinparam classAttributeIconSize 0
skinparam linetype ortho
skinparam nodesep 50
skinparam ranksep 80
skinparam packageStyle rectangle
skinparam shadowing false

' ════════════════════════════════════════════════════════════════
'  PACOTE: Heróis & Usuários
' ════════════════════════════════════════════════════════════════
package "Heróis & Usuários" {

  enum UserRole {
    ADMIN
    OPERATOR
    HERO
    VILLAIN
  }

  enum HeroiDisponibilidade {
    DISPONIVEL
    EM_MISSAO
    INATIVO
  }

  class EquipeHeroica {
    +id: UUID
    +nome: String
    +especialidadePrincipal: String
    +ativa: boolean
    +createdAt: Instant
    +updatedAt: Instant
  }

  class Heroi {
    +id: UUID
    +nomeHeroico: String
    +nomeCivil: String
    +especialidade: String
    +statusDisponibilidade: HeroiDisponibilidade
    +nivel: String
    +ativo: boolean
    +createdAt: Instant
    +updatedAt: Instant
  }

  class Usuario {
    +id: UUID
    +nome: String
    +email: String
    +senhaHash: String
    +role: UserRole
    +ativo: boolean
    +cooldownAvailableAt: Instant
    +createdAt: Instant
    +updatedAt: Instant
  }

  EquipeHeroica "1" o-- "0..*" Heroi          : contém
  Usuario       "1" --> "0..1" Heroi           : vinculado a
}

' ════════════════════════════════════════════════════════════════
'  PACOTE: Missão Operacional
' ════════════════════════════════════════════════════════════════
package "Missão Operacional" {

  enum MissionStatus {
    RECEBIDA
    EM_ANALISE
    PRIORIZADA
    EQUIPE_DESIGNADA
    EM_ANDAMENTO
    CONCLUIDA
    FALHA_PROCESSAMENTO
  }

  enum PrioridadeMissao {
    BAIXA
    MEDIA
    ALTA
    CRITICA
  }

  enum TipoAmeaca {
    INVASAO
    DESASTRE_NATURAL
    META_HUMANO
    TECNOLOGICA
    DESCONHECIDA
  }

  enum MissionHistoryOrigin {
    API_REGISTRO
    API_ATRIBUICAO
    KAFKA_WORKFLOW
    KAFKA_WORKFLOW_ERRO
  }

  class Mission {
    +id: UUID
    +titulo: String
    +descricao: String
    +tipoAmeaca: TipoAmeaca
    +prioridade: PrioridadeMissao
    +status: MissionStatus
    +cidade: String
    +bairro: String
    +referencia: String
    +atribuidoEm: Instant
    +atribuidoPor: String
    +dataCriacao: Instant
    +ultimaAtualizacao: Instant
  }

  class MissionHistory {
    +id: UUID
    +missionId: UUID
    +statusAnterior: MissionStatus
    +statusNovo: MissionStatus
    +mensagem: String
    +origem: MissionHistoryOrigin
    +ocorridoEm: Instant
  }

  Mission "1" *-- "0..*" MissionHistory : auditoria
}

' ════════════════════════════════════════════════════════════════
'  PACOTE: Party Mission
' ════════════════════════════════════════════════════════════════
package "Party Mission" {

  enum MissionCombatState {
    LOBBY
    ACTIVE
    NORMAL
    ALERTA_INFILTRACAO
    EM_DUELO
    SABOTADA
    DEFENDIDA
    SEM_CHEFE
    EM_CRISE
    COMPROMETIDA
  }

  enum MissionMemberRole {
    CHEFE
    HERO_MEMBER
    VILLAIN_INTRUDER
  }

  enum MissionInviteStatus {
    PENDING
    ACCEPTED
    DECLINED
  }

  enum TaskStatus {
    PENDING
    IN_PROGRESS
    AWAITING_PUZZLE
    DONE
    BLOCKED
  }

  enum PuzzleType {
    DRAG_SORT
    NODE_CONNECT
    SEQUENCE_INPUT
    CARD_MATCH
    TILE_ROTATE
    COLOR_SIMON
    TERMINAL_HACK
    SLIDING_TILE
    ARCADE_SHOOTER
    ARCADE_DODGE
  }

  class PlayerMission {
    +id: UUID
    +titulo: String
    +descricao: String
    +ownerUserId: UUID
    +combatState: MissionCombatState
    +minPlayers: int
    +partySeed: String
    +startedByUserId: UUID
    +startedAt: Instant
    +createdAt: Instant
    +updatedAt: Instant
  }

  class MissionMember {
    +id: UUID
    +missionId: UUID
    +userId: UUID
    +role: MissionMemberRole
    +inviteStatus: MissionInviteStatus
    +invitedByUserId: UUID
    +joinedAt: Instant
  }

  class MissionTask {
    +id: UUID
    +missionId: UUID
    +assignedToUserId: UUID
    +title: String
    +description: String
    +status: TaskStatus
    +critical: boolean
    +puzzleType: PuzzleType
    +dependsOnTaskId: UUID
    +createdAt: Instant
    +updatedAt: Instant
  }

  PlayerMission "1" *-- "1..*" MissionMember : party
  PlayerMission "1" *-- "0..*" MissionTask   : tarefas
  MissionTask   "0..1" --> "0..1" MissionTask : depends on
}

' ════════════════════════════════════════════════════════════════
'  PACOTE: Duelo & Sabotagem
' ════════════════════════════════════════════════════════════════
package "Duelo & Sabotagem" {

  enum DuelStatus {
    PENDING
    ACTIVE
    HERO_WON
    VILLAIN_WON
    CANCELLED
    TIMEOUT
  }

  enum SabotageType {
    BLOCK_TASK
    SLOW_PROGRESS
    REMOVE_MEMBER
    SILENT_OBSERVE
  }

  enum SabotageScope {
    CHEFE
    MEMBRO_ESPECIFICO
    EQUIPE
    SILENCIOSO
  }

  class DuelSession {
    +id: UUID
    +missionId: UUID
    +attackerUserId: UUID
    +defenderUserId: UUID
    +seed: String
    +puzzleType: PuzzleType
    +status: DuelStatus
    +roundCurrent: int
    +roundMax: int
    +attackerRoundsWon: int
    +defenderRoundsWon: int
    +startedAt: Instant
    +finishedAt: Instant
    +timeoutAt: Instant
  }

  class PuzzleAttempt {
    +id: UUID
    +duelSessionId: UUID
    +userId: UUID
    +roundNumber: int
    +moveSequence: JSON
    +isValid: boolean
    +timeMs: int
    +submittedAt: Instant
  }

  class SabotageEvent {
    +id: UUID
    +duelSessionId: UUID
    +missionId: UUID
    +attackerUserId: UUID
    +sabotageType: SabotageType
    +targetScope: SabotageScope
    +targetUserId: UUID
    +appliedAt: Instant
    +expiresAt: Instant
    +reversedAt: Instant
    +effectPayload: JSON
  }

  DuelSession "1" *-- "0..*" PuzzleAttempt : tentativas
  DuelSession "1" *-- "0..*" SabotageEvent : sabotagems
}

' ════════════════════════════════════════════════════════════════
'  RELACIONAMENTOS ENTRE PACOTES
' ════════════════════════════════════════════════════════════════

Mission      "0..*" --> "0..1" Heroi          : responsável
Mission      "0..*" --> "0..1" EquipeHeroica  : responsável

PlayerMission "1"   *-- "0..*" DuelSession    : duelos

@enduml
